<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--Hide Menu items by setting android:visible="false"-->
    <item
        android:orderInCategory="1"
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_round"
        />

        <item
            android:orderInCategory="2"
            android:id="@+id/nav_telegram"
            android:visible="true"
            android:icon="@drawable/ic_telegram_round"
            android:title="@string/telegram" />

    <item
        android:orderInCategory="2"
        android:id="@+id/nav_contactus"
        android:title="@string/contactus"
        android:icon="@drawable/ic_call_round"
        />

</menu>
